fix: use node-pty for Claude CLI (requires TTY), ignore node_modules

--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     "dev": "tsx src/cli.tsx",
     "start": "node dist/cli.js"
   },
-  "keywords": ["ai", "agent", "claude", "cli"],
+  "keywords": [
+    "ai",
+    "agent",
+    "claude",
+    "cli"
+  ],
   "author": "Jack Gladowsky",
   "license": "MIT",
   "dependencies": {
     "ink": "^5.2.0",
     "ink-spinner": "^5.0.0",
     "ink-text-input": "^6.0.0",
+    "node-pty": "^1.1.0",
     "react": "^18.3.1"
   },
   "devDependencies": {
